--- a/threejs/fxhash_Rooms/public/style.css
+++ b/threejs/fxhash_Rooms/public/style.css
@@ -1,19 +1,18 @@
-*
-{
-    margin: 0;
-    padding: 0;
-}
-
-html,
-body
-{
+body {
+    background-color: white;
     overflow: hidden;
+    background: #333;
 }
-
 .webgl
 {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    overflow: auto;
     position: fixed;
+    object-fit: contain;
     top: 0;
+    bottom: 0;
     left: 0;
-    outline: none;
+    right: 0;
 }
